# pokedex

./: .editorconfig  .editorconfig-checker.json  .gitignore  Makefile  pyproject.toml  requirements-min.in  requirements-min.txt
.github/: renovate.json  renovate.json5
.github/workflows/: ci.yml
pokeapi/scripts/gen8/: pokedex.py
pokedex/: __init__.py  collections.py  enums.py  main.py  mixins.py  tables.py
pokedex/data/: ability_name_changes.csv  ability_names.csv  ability_names_revision.csv  ability_slots.csv  egg_group_names.csv  egg_groups.csv  game_groups.csv  games.csv  held_item_slots.csv  item_name_changes.csv  item_names.csv  item_names_revision.csv  languages.csv  move_name_changes.csv  move_names.csv  move_names_revision.csv  moves.csv  nature_name_changes.csv  nature_names.csv  pokemon_abilities.csv  pokemon_ability_changes.csv  pokemon_egg_group_changes.csv  pokemon_egg_groups.csv  pokemon_ev_yield_changes.csv  pokemon_evs_yield.csv  pokemon_flavor_text_changes.csv  pokemon_flavor_text_revision.csv  pokemon_form_name_changes.csv  pokemon_form_names.csv  pokemon_species.csv  pokemon_species_name_changes.csv  pokemon_species_names.csv  pokemon_species_names_revision.csv  pokemon_stat_changes.csv  pokemon_stats.csv  pokemon_type_changes.csv  pokemon_types.csv  pokemon_wild_held_items_game.csv  pokemon_wild_held_items_game_group.csv  stat_name_changes.csv  (+3 more)
pokedex/data/csv/: evolution_trigger_prose.csv  evolution_triggers.csv  item_game_indices.csv  items.csv  machines.csv  move_names.csv  moves.csv  pokemon.csv  pokemon_abilities.csv  pokemon_evolution.csv  pokemon_form_generations.csv  pokemon_form_names.csv  pokemon_forms.csv  pokemon_species.csv  pokemon_species_names.csv  pokemon_stats.csv  pokemon_types.csv
src/pokedex/: __init__.py  context.py  enums.py  mixins.py  tables.py
src/pokedex/cache/: __init__.py  converter.py
src/pokedex/data/: abilities.csv  egg_group_names.csv  items.csv  move_name_changes.csv  move_names.csv  nature_names.csv  natures.csv  pokemon.csv  pokemon_egg_group_changes.csv  pokemon_egg_groups.csv  pokemon_ev_yield_changes.csv  pokemon_form_name_changes.csv  pokemon_form_names.csv  pokemon_species_name_changes.csv  pokemon_species_names.csv  pokemon_stat_changes.csv  pokemon_stats.csv  pokemon_types.csv  pokemon_wild_held_items_game_group.csv  stat_names.csv  stats.csv  type_names.csv  types.csv
src/pokedex/data/black_2_white_2/: abilities.yaml  items.yaml  moves.yaml  pokemon.yaml  types.yaml
src/pokedex/data/black_white/: abilities.yaml  items.yaml  moves.yaml  natures.yaml  pokemon.yaml
src/pokedex/data/brilliant_diamond_shining_pearl/: abilities.yaml  items.yaml  moves.yaml  pokemon.yaml
src/pokedex/data/common/: egg_groups.yaml
src/pokedex/data/crystal/: items.yaml  moves.yaml  pokemon.yaml  types.yaml
src/pokedex/data/diamond_pearl/: abilities.yaml  items.yaml  moves.yaml  natures.yaml  pokemon.yaml  types.yaml
src/pokedex/data/emerald/: abilities.yaml  items.yaml  moves.yaml  natures.yaml  pokemon.yaml  types.yaml
src/pokedex/data/fire_red_leaf_green/: abilities.yaml  items.yaml  moves.yaml  pokemon.yaml
src/pokedex/data/gold_silver/: items.yaml  moves.yaml  pokemon.yaml  types.yaml
src/pokedex/data/heart_gold_soul_silver/: abilities.yaml  items.yaml  moves.yaml  pokemon.yaml
src/pokedex/data/legends_arceus/: items.yaml  moves.yaml  natures.yaml  pokemon.yaml  types.yaml
src/pokedex/data/legends_za/: items.yaml  moves.yaml  natures.yaml  pokemon.yaml  types.yaml
src/pokedex/data/lets_go_pikachu_eevee/: items.yaml  moves.yaml  pokemon.yaml
src/pokedex/data/omega_ruby_alpha_sapphire/: abilities.yaml  items.yaml  moves.yaml  pokemon.yaml  types.yaml
src/pokedex/data/platinum/: abilities.yaml  items.yaml  moves.yaml  natures.yaml  pokemon.yaml
src/pokedex/data/red_blue/: pokemon.yaml
src/pokedex/data/ruby_sapphire/: items.yaml  moves.yaml  pokemon.yaml
src/pokedex/data/scarlet_violet/: abilities.yaml  items.yaml  moves.yaml  natures.yaml  pokemon.yaml  types.yaml
src/pokedex/data/sun_moon/: abilities.yaml  items.yaml  moves.yaml  pokemon.yaml
src/pokedex/data/sword_shield/: abilities.yaml  items.yaml  moves.yaml  pokemon.yaml  types.yaml
src/pokedex/data/ultra_sun_ultra_moon/: abilities.yaml  items.yaml  moves.yaml  pokemon.yaml
src/pokedex/data/x_y/: abilities.yaml  items.yaml  moves.yaml  natures.yaml  pokemon.yaml
src/pokedex/data/yellow/: items.yaml  moves.yaml  pokemon.yaml  types.yaml
src/pokedex/entities/: abilities.py  base.py  egg_groups.py  items.py  moves.py  natures.py  pokemon.py  types.py
tests/: conftest.py  test_pokedex.py  test_pokemon_forms.py  test_session.py
tests/data/: test_name_changes.py  test_pokemon_attribute_changes.py
