[project]
name = "pokedex"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name="Parnassius", email="Parnassius@users.noreply.github.com"},
]
dependencies = [
    "sqlalchemy>=2.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
asyncio = [
    "sqlalchemy[aiosqlite]>=2.0.0",
]

[dependency-groups]
dev = [
    "pokedex[asyncio]",
    "mypy==1.16.1",
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "ruff==0.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.version]
path = "src/pokedex/__about__.py"


[tool.mypy]
python_version = "3.9"
strict = true

# Disallow dynamic typing
disallow_any_unimported = true
#disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true

show_error_codes = true
warn_unreachable = true


[tool.pytest.ini_options]
asyncio_mode = "auto"


[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ARG",   # flake8-unused-arguments
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle
    "EM",    # flake8-errmsg
    "F",     # pyflakes
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "ISC",   # flake8-implicit-str-concat
    "N",     # pep8-naming
    "PGH",   # pygrep-hooks
    "PTH",   # flake8-use-pathlib
    "RET",   # flake8-return
    "RUF",   # Ruff-specific rules
    "T10",   # flake8-debugger
    "TID",   # flake8-tidy-imports
    "TRY",   # tryceratops
    "UP",    # pyupgrade
    "W",     # pycodestyle
    "YTT",   # flake8-2020
]
ignore = [
    "A003",  # builtin-attribute-shadowing
]
fixable = [
    "I",     # isort
    "F401",  # unused-import
    "TID",   # flake8-tidy-imports
    "UP",    # pyupgrade
]
dummy-variable-rgx = "^_$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["RUF001"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "pokedex.enums.GameGroup.get_default",
    "pokedex.enums.Language.get_default",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = false
