[project]
name = "pokedex"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name="Parnassius", email="Parnassius@users.noreply.github.com"},
]
dependencies = [
    "cattrs>=25.1.0",
    "pyyaml>=6.0.1",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "mypy==1.20.2",
    "pytest==9.0.3",
    "ruff==0.15.12",
    "types-pyyaml==6.0.12.20260408",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[tool.hatch.version]
source = "vcs"


[tool.mypy]
python_version = "3.13"
strict = true

# Disallow dynamic typing
disallow_any_unimported = true
#disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true

show_error_codes = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pokedex.cache.converter"
disallow_any_decorated = false
disallow_any_explicit = false


[tool.pytest]
strict = true


[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ANN",   # flake8-annotations
    "ARG",   # flake8-unused-arguments
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle
    "EM",    # flake8-errmsg
    "F",     # pyflakes
    "FURB",  # refurb
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "INP",   # flake8-no-pep420
    "ISC",   # flake8-implicit-str-concat
    "N",     # pep8-naming
    "PERF",  # perflint
    "PGH",   # pygrep-hooks
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-use-pathlib
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "RUF",   # Ruff-specific rules
    "SIM",   # flake8-simplify
    "SLF",   # flake8-self
    "T10",   # flake8-debugger
    "TC",    # flake8-type-checking
    "TID",   # flake8-tidy-imports
    "TRY",   # tryceratops
    "UP",    # pyupgrade
    "W",     # pycodestyle
    "YTT",   # flake8-2020
]
ignore = [
    "A003",  # builtin-attribute-shadowing
    "TC001", # typing-only-first-party-import
    "TC002", # typing-only-third-party-import
    "TC003", # typing-only-standard-library-import
]
fixable = [
    "I",     # isort
    "F401",  # unused-import
    "TC",    # flake8-type-checking
    "TID",   # flake8-tidy-imports
    "UP",    # pyupgrade
]
dummy-variable-rgx = "^_$"

[tool.ruff.lint.per-file-ignores]
"src/pokedex/cache/converter.py" = [
    "ANN401",  # any-type
    "ARG001",  # unused-function-argument
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "pokedex.enums.GameGroup.get_default",
    "pokedex.enums.Language.get_default",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["sqlalchemy.orm.DeclarativeBase"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false


[tool.uv]
cache-keys = [
    {file="pyproject.toml"},
    {git={commit=true}},
]
